--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="manifest" href="/public/site.webmanifest" />
     <link rel="icon" href="/public/favicon-16x16.png" color="#5bbad5" />
+    <link rel="stylesheet" href="node_modules/flexlayout-react/style/dark.css" />
+
     <meta charset="UTF-8" />
     <meta name="language" content="en" />
     <meta
