Removing cdn.buffer.finance

--- a/index.html
+++ b/index.html
@@ -1,48 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="manifest" href="/public/site.webmanifest" />
-    <link rel="icon" href="/public/favicon-16x16.png" color="#5bbad5" />
-    <meta charset="UTF-8" />
-    <meta name="language" content="en" />
-    <meta
-      name="description"
-      content="Buffer is an on-chain non-custodial peer-to-pool options trading protocol."
-    />
-    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="twitter:card" content="summary" />
-    <meta name="twitter:site" content="@Buffer_Finance" />
-    <meta name="twitter:title" content="Buffer Finance" />
-    <meta
-      name="twitter:description"
-      content="Buffer is an on-chain non-custodial peer-to-pool options trading protocol."
-    />
-    <meta
-      name="twitter:image"
-      content="https://cdn.buffer.finance/Buffer-Media/main/bfr.png"
-    />
-    <meta property="og:url" content="https://app.buffer.finance/" />
-    <meta property="og:title" content="Buffer finance" />
-    <meta property="og:site_name" content="Buffer finance" />
-    <meta
-      property="og:description"
-      key="description"
-      content="Buffer is an on-chain non-custodial peer-to-pool options trading protocol."
-    />
-    <meta property="og:type" content="website" />
-    <meta
-      property="og:image"
-      content="https://cdn.buffer.finance/Buffer-Media/main/bfr.png"
-    />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./index.css" />
-    <script type="module" src="./polyfill.ts"></script>
-    <title>Buffer</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="manifest" href="/public/site.webmanifest" />
+  <link rel="icon" href="/public/favicon-16x16.png" color="#5bbad5" />
+  <meta charset="UTF-8" />
+  <meta name="language" content="en" />
+  <meta name="description" content="Buffer is an on-chain non-custodial peer-to-pool options trading protocol." />
+  <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:site" content="@Buffer_Finance" />
+  <meta name="twitter:title" content="Buffer Finance" />
+  <meta name="twitter:description"
+    content="Buffer is an on-chain non-custodial peer-to-pool options trading protocol." />
+  <meta name="twitter:image" content="https://res.cloudinary.com/dtuuhbeqt/image/upload/v1684085787/bfr.png" />
+  <meta property="og:url" content="https://app.buffer.finance/" />
+  <meta property="og:title" content="Buffer finance" />
+  <meta property="og:site_name" content="Buffer finance" />
+  <meta property="og:description" key="description"
+    content="Buffer is an on-chain non-custodial peer-to-pool options trading protocol." />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="https://res.cloudinary.com/dtuuhbeqt/image/upload/v1684085787/bfr.png" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="./index.css" />
+  <script type="module" src="./polyfill.ts"></script>
+  <title>Buffer</title>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
