--- a/index.html
+++ b/index.html
@@ -1,39 +1,106 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="manifest" href="/public/site.webmanifest" />
+    <link rel="icon" href="/public/favicon-16x16.png" color="#5bbad5" />
+    <link
+      rel="stylesheet"
+      href="node_modules/flexlayout-react/style/dark.css"
+    />
 
-<head>
-  <meta charset="UTF-8" />
-  <link rel="manifest" href="/public/site.webmanifest" />
-  <link rel="icon" href="/public/favicon-16x16.png" color="#5bbad5" />
-  <link rel="stylesheet" href="node_modules/flexlayout-react/style/dark.css" />
+    <meta charset="UTF-8" />
+    <meta name="language" content="en" />
+    <meta
+      name="description"
+      content="Buffer is an on-chain non-custodial peer-to-pool options trading protocol."
+    />
+    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@Buffer_Finance" />
+    <meta name="twitter:title" content="Buffer Finance" />
+    <meta
+      name="twitter:description"
+      content="Buffer is an on-chain non-custodial peer-to-pool options trading protocol."
+    />
+    <meta
+      name="twitter:image"
+      content="https://res.cloudinary.com/dtuuhbeqt/image/upload/v1684085787/bfr.png"
+    />
+    <meta property="og:url" content="https://app.buffer.finance/" />
+    <meta property="og:title" content="Buffer finance" />
+    <meta property="og:site_name" content="Buffer finance" />
+    <meta
+      property="og:description"
+      key="description"
+      content="Buffer is an on-chain non-custodial peer-to-pool options trading protocol."
+    />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:image"
+      content="https://res.cloudinary.com/dtuuhbeqt/image/upload/v1684085787/bfr.png"
+    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./index.css" />
+    <script type="module" src="./polyfill.ts"></script>
+    <script>
+      !(function (t, e) {
+        var o, n, p, r;
+        e.__SV ||
+          ((window.posthog = e),
+          (e._i = []),
+          (e.init = function (i, s, a) {
+            function g(t, e) {
+              var o = e.split('.');
+              2 == o.length && ((t = t[o[0]]), (e = o[1])),
+                (t[e] = function () {
+                  t.push([e].concat(Array.prototype.slice.call(arguments, 0)));
+                });
+            }
+            ((p = t.createElement('script')).type = 'text/javascript'),
+              (p.async = !0),
+              (p.src = s.api_host + '/static/array.js'),
+              (r = t.getElementsByTagName('script')[0]).parentNode.insertBefore(
+                p,
+                r
+              );
+            var u = e;
+            for (
+              void 0 !== a ? (u = e[a] = []) : (a = 'posthog'),
+                u.people = u.people || [],
+                u.toString = function (t) {
+                  var e = 'posthog';
+                  return (
+                    'posthog' !== a && (e += '.' + a), t || (e += ' (stub)'), e
+                  );
+                },
+                u.people.toString = function () {
+                  return u.toString(1) + '.people (stub)';
+                },
+                o =
+                  'capture identify alias people.set people.set_once set_config register register_once unregister opt_out_capturing has_opted_out_capturing opt_in_capturing reset isFeatureEnabled onFeatureFlags getFeatureFlag getFeatureFlagPayload reloadFeatureFlags group updateEarlyAccessFeatureEnrollment getEarlyAccessFeatures getActiveMatchingSurveys getSurveys'.split(
+                    ' '
+                  ),
+                n = 0;
+              n < o.length;
+              n++
+            )
+              g(u, o[n]);
+            e._i.push([i, s, a]);
+          }),
+          (e.__SV = 1));
+      })(document, window.posthog || []);
+      posthog.init('phc_vRaSfkTdkc7xFcEsjjaJmFwZPtsAvp6rmctMLyDkFOU', {
+        api_host: 'https://app.posthog.com',
+      });
+    </script>
 
-  <meta charset="UTF-8" />
-  <meta name="language" content="en" />
-  <meta name="description" content="Buffer is an on-chain non-custodial peer-to-pool options trading protocol." />
-  <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="twitter:card" content="summary" />
-  <meta name="twitter:site" content="@Buffer_Finance" />
-  <meta name="twitter:title" content="Buffer Finance" />
-  <meta name="twitter:description"
-    content="Buffer is an on-chain non-custodial peer-to-pool options trading protocol." />
-  <meta name="twitter:image" content="https://res.cloudinary.com/dtuuhbeqt/image/upload/v1684085787/bfr.png" />
-  <meta property="og:url" content="https://app.buffer.finance/" />
-  <meta property="og:title" content="Buffer finance" />
-  <meta property="og:site_name" content="Buffer finance" />
-  <meta property="og:description" key="description"
-    content="Buffer is an on-chain non-custodial peer-to-pool options trading protocol." />
-  <meta property="og:type" content="website" />
-  <meta property="og:image" content="https://res.cloudinary.com/dtuuhbeqt/image/upload/v1684085787/bfr.png" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="./index.css" />
-  <script type="module" src="./polyfill.ts"></script>
-  <title>Buffer</title>
-</head>
+    <title>Buffer</title>
+  </head>
 
-<body>
-  <div id="root"></div>
-  <script type="module" src="/src/main.tsx"></script>
-</body>
-
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
 </html>
