Add cookie3 script

--- a/index.html
+++ b/index.html
@@ -96,6 +96,24 @@
       });
     </script>
 
+    <script>
+      var cookie3Options = {
+        siteId: 507,
+        additionalTracking: true,
+        cookielessEnabled: true,
+      };
+      window._paq = window._paq || [];
+      (function () {
+        var d = document,
+          g = d.createElement('script'),
+          s = d.getElementsByTagName('script')[0];
+        g.async = true;
+        g.src =
+          'https://cdn.cookie3.co/scripts/analytics/latest/cookie3.analytics.min.js';
+        s.parentNode.insertBefore(g, s);
+      })();
+    </script>
+
     <title>Buffer</title>
   </head>
 
